# nano-world-model

./: .gitignore  README.md  pyproject.toml
docs/: README.md  config_system.md  evaluation.md  training.md
docs/applications/: long_rollout.md  planning.md  video_to_3d.md
docs/datasets/: README.md
notebooks/: models.ipynb
src/: callbacks.py  main.py
src/configs/: config.yaml
src/configs/experiment/: default.yaml  dino_wm_pusht_flow.yaml
src/configs/local/: paths.yaml.example
src/diffusion/: __init__.py  flow_matching.py
src/experiments/: train_experiment.py
src/utils/: distributed_utils.py  logger_utils.py  metrics.py
src/wm_datasets/data_source/lerobot/: lerobot_data_source.py
